@@ -6685,6 +6685,12 @@ test expr-38.6 {abs and -0 [Bug 1893815]} {
 test expr-38.7 {abs and -0 [Bug 1893815]} {
     ::tcl::mathfunc::abs -1e-324
 } 0.0
+test expr-38.8 {abs and 0.0 [Bug 2954959]} {
+    ::tcl::mathfunc::abs 0.0
+} 0.0
+test expr-38.9 {abs and 0.0 [Bug 2954959]} {
+    expr {abs(0.0)}
+} 0.0
 
 testConstraint testexprlongobj   [llength [info commands testexprlongobj]]
 testConstraint testexprdoubleobj [llength [info commands testexprdoubleobj]]
